tests/compile-pass/super_trait_simple_for_refs.rs
use auto_impl::auto_impl;

#[auto_impl(Box, &)]
trait Supi {}

#[auto_impl(Box, &)]
trait Foo: Supi {}


fn main() {}
